cluster/redcloud/apps/nextcloud/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: traefik.mesh.rigsb.net
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`nextcloud.mesh.rigsb.net`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
      middlewares:
        - name: limit-buffering
          namespace: traefik
        - name: security-headers
          namespace: traefik
  tls:
    secretName: nextcloud-mesh-rigsb-tls
